# Rigroup

./: MD5  autogen.sh  configure  configure.in
man/: Rigroup-package.Rd
src/: Makefile.win  Makevars  Makevars.in
