AC_INIT(src/Rigroup.c)
AC_PREREQ(2.13)
AC_REVISION($Revision: 1.5 $)
# AC_CONFIG_SRCDIR(src/Rigroup.c)

if test -z "$HAVE_UNISTD_H"; then
  AC_CHECK_HEADER(/usr/include/unistd.h,
      RIGROUPDEFINES="-DHAVE_UNISTD_H=1")
fi

AC_SUBST(RIGROUPDEFINES)

AC_SUBST(PKG_CFLAGS)
AC_SUBST(PKG_CPPFLAGS)
AC_SUBST(PKG_LIBS)

AC_OUTPUT(src/Makevars)
